# icu-resb

./: .gitignore  Cargo.toml  README.md
examples/: time_zone_rule.rs
src/: binary.rs  bundle.rs  lib.rs
src/binary/: deserializer.rs  reader.rs  writer.rs
src/binary/reader/: general_parsers.rs  parse_error.rs  parse_state.rs
src/binary/reader/tests/: mod.rs
src/text/: reader.rs
src/text/reader/: parse_state.rs
