[package]
name = "icu-resb"
version = "0.1.0"
edition = "2021"
license = "Unicode-DFS-2016"

[lib]
name = "icu_resb"

[[bin]]
name = "genrb"
required-features = ["tools"]

[[example]]
name = "time_zone_rule"
required-features = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.9.3", optional = true }
nom = { version = "7.1.3", optional = true }
serde = "1.0.164"
zerovec = { version = "0.9.4", features = ["serde"], optional = true }

[features]
default = ["tools"]
examples = ["serde/derive", "zerovec", "std"]
std = []
tools = ["dep:indexmap", "dep:nom", "std"]
