[package]
name = "icu-resb"
version = "0.1.0"
edition = "2021"

[lib]
name = "icu_resb"

[[bin]]
name = "genrb"

[[bin]]
name = "test_read"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
nom = { version = "7.1.3", features = ["std"] }
